--- a/pages_about/css/style.css
+++ b/pages_about/css/style.css
@@ -43,7 +43,7 @@ html, body{
     font-size: 2vh;
     line-height: 4.5vh;
     background-color: var(--main-bg-color);
-    
+    text-align: justify;
 }
 a{
     color: var(--main-text-color);
@@ -140,13 +140,17 @@ main {
 
 @media screen and (max-width: 480px) {
     main {
-        flex-flow: column nowrap;
-        width: 100%;
+        flex-flow: column-reverse nowrap;
+        width: 80%;
+    }
+    header {
+        width: 80%;
     }
     .content {
-        width: 80%;
+        width: 100%;
     }
     .picture {
-        width: 80%;
+        width: 100%;
+        max-width: 100vw;
     }
 }
